--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 private_key_file = ~/.ssh/id_rsa
 forks = 5
-inventory = /home/ansible/
+inventory = /mnt/d/ezmeral/mapr/ansible/inventory.ini
