feat(): Added SSHPASS to the ansible_setup_passwordless_ssh.yml playbook

--- a/ansible/ansible_setup_passwordless_ssh.yml
+++ b/ansible/ansible_setup_passwordless_ssh.yml
@@ -23,6 +23,9 @@
   gather_facts: false
 
   tasks:
+  
+    - name : Install the latest SSHPASS package
+      apt: name=sshpass state=latest update_cache=true
 
     - name: check .ssh local directory exists
       stat:
