fix(): Ajout des dernières instructions

--- a/ansible/mapr_configuration/vars/main.yml
+++ b/ansible/mapr_configuration/vars/main.yml
@@ -4,7 +4,8 @@ mapr_ecosystem_version: "MEP-6.1.1"
 cluster_name: mapr.cluster.local
 email: "your_subscription_mail@hpe.com"
 repo_password: "your_mapr_token"
-mapr_password: "mapr"
+# To encryot the pssword, use the following command : python -c 'import crypt; print crypt.crypt("This is my Password", "$1$SomeSalt$")'
+mapr_password: "$1$SomeSalt$OpdfRPgT6HV2yRYEiAW3d1" #must be encrypted (here the encryption for mapr)
 gid: 3333
 service_ports:
   all:
